fix overflow

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,4 +1,3 @@
 .container-fluid{
-    height: 600px;
-    overflow-y: scroll;
+    padding-bottom: 10px;
 }
